# zephyr

./: .gitignore  CMakeLists.txt  techstack.md  techstack.yml  west.yml
boards/arm/: list.txt
boards/arm/dk6_qn9090/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  dk6_qn9090-pinctrl.dtsi  dk6_qn9090.dts  dk6_qn9090.yaml  dk6_qn9090_defconfig  pinmux.c  pre_dt_board.cmake
boards/arm/lpcxpressok32w061/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  lpcxpressok32w061.dts  (+4 more)
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: clock_control_mcux_syscon.c
drivers/flash/: Kconfig.mcux  soc_flash_mcux.c
drivers/gpio/: gpio_mcux_lpc.c
drivers/hwinfo/: Kconfig
drivers/interrupt_controller/: intc_nxp_pint.c
drivers/modem/: CMakeLists.txt  Kconfig  Kconfig.nordic-nrf9160  hl7800.c  modem_cmd_handler.c  nordic-nrf9160.c  nordic-nrf9160.h  nordic-nrf9160.md
drivers/nfc/: CMakeLists.txt  Kconfig  Kconfig.nrfxnfc  Kconfig.nt3h2x11  nrfxnfc.c  nt3h2x11.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.k32_iocon  pinctrl_k32_iocon.c  pinctrl_lpc_iocon.c
drivers/serial/: uart_mcux_flexcomm.c
kernel/: CMakeLists.txt  Kconfig  events.c  idle.c  sched.c
modules/: Kconfig.mcux
samples/pm_dk6/: CMakeLists.txt  prj.conf
samples/subsys/nfc/: CMakeLists.txt  prj.conf
samples/subsys/nfc/boards/: dk6_qn9090.conf  mg100.conf
samples/subsys/nfc/src/: main.c
scripts/: gen_kobject_list.py
scripts/footprint/: size_report
soc/arm/nxp_k32/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  board_utility.c  dk6_image_tool.py
soc/arm/nxp_k32/k32/: CMakeLists.txt  Kconfig.defconfig.k32w061  Kconfig.defconfig.qn9090  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  PWR_setjmp.S  device_power.c  device_power.h  pinctrl_soc.h  power.c  soc.c  soc.h
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: Kconfig
subsys/nfc/: CMakeLists.txt  Kconfig
subsys/pm/: Kconfig  pm.c  policy.c  state.c
(+32 files in other folders)
